@@ -154,6 +154,8 @@ INCOMPATIBLE CHANGES SINCE 2.4.x
   even on 32 bit platforms, instead of off_t and so the return value of
   wxFile::Length(), for example, shouldn't be assigned to off_t variable any
   more (the compiler might warn you about this).
+- wxListItem::m_data is now of type wxUIntPtr, not long, for compatibility
+  with 64 bit systems
 
 
 DEPRECATED METHODS SINCE 2.4.x
